fix(frontend): fix text select and dark mode in game-log window

--- a/src/styles/game-log.module.css
+++ b/src/styles/game-log.module.css
@@ -9,5 +9,5 @@
   overflow-y: scroll;
   white-space: pre-wrap;
   word-break: break-all;
-  background: white;
+  user-select: text;
 }
