--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,6 @@ body[use-custom-font] {
 
 body img {
   -webkit-user-drag: none;
-  user-select: none;
 }
 
 
